--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
 
     <div class="header__nav-wrapper">
       <nav class="header__nav main-nav">
-        <a class="main-nav__item main-nav__item--logo header__logo">
+        <a href="index.html" class="main-nav__item main-nav__item--logo header__logo">
           <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
         </a>
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -72,7 +72,7 @@
             </div>
             <div class="product-card__footer">
               <b class="product-card__price">1 200 руб.</b>
-              <a class="product-card__cart" href="#">Добавить в корзину</a>
+              <a class="product-card__cart" aria-label="Добавить в корзину" href="#"></a>
             </div>
         </li>
         </div>
@@ -93,7 +93,7 @@
 
             <div class="product-card__footer">
               <b class="product-card__price">690 руб.</b>
-              <a class="product-card__cart" href="#">Добавить в корзину</a>
+              <a class="product-card__cart" aria-label="Добавить в корзину" href="#"></a>
             </div>
           </div>
 
@@ -113,7 +113,7 @@
             </div>
             <div class="product-card__footer">
               <b class="product-card__price">1 500 руб.</b>
-              <a class="product-card__cart" href="#">Добавить в корзину</a>
+              <a class="product-card__cart" aria-label="Добавить в корзину" href="#"></a>
             </div>
           </div>
 
@@ -123,9 +123,17 @@
     </section>
 
     <article class="how-its-done">
-      <h2 class="how-its-done__title">Процесс производства</h2>
+      <h2 class="how-its-done__title">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32"
+          xml:space="preserve">
+          <g transform="translate(0 192)">
+            <path
+              d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z" />
+          </g>
+        </svg>Процесс производства</h2>
 
-      <div class="how-its-done__image-wrapper">
+      <div class="how-its-done__image-wrapper image image--with-player">
         <img class="how-its-done__image" width="260" src="./img/video-mobile@1x.jpg" alt="Процесс производства">
       </div>
 
@@ -141,6 +149,9 @@
   </main>
 
   <footer class="footer">
+    <a class="footer__logo">
+      <img class="footer__logo-image" src="./img/logo-footer.svg" width="102" height="34" alt="Мишка">
+    </a>
     <div class="footer__social social">
       <ul class="social__list">
         <li class="social__item">
