--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
     <div class="main-nav">
       <a class="main-nav__logo header__logo" href="/">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
           <img class="header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
         </picture>
@@ -34,19 +34,15 @@
       </ul>
       <ul class="main-nav__list main-nav__list--search-checkout">
         <li class="main-nav__item main-nav__item--search">
-          <svg class="main-nav__icon main-nav__icon--search" xmlns="http://www.w3.org/2000/svg" width="17.6"
-            height="17.6" viewbox="-0.8 -0.8 17.6 17.6">
-            <path fill="#231F20"
-              d="M16.47 14.93l-3.415-3.415A7.67 7.67 0 0014.6 6.899C14.6 2.646 11.153-.8 6.9-.8S-.8 2.646-.8 6.899s3.446 7.7 7.699 7.7c1.734 0 3.326-.58 4.613-1.546l3.417 3.416c.203.202.418.33.771.33a1.1 1.1 0 001.1-1.1c0-.24-.061-.499-.33-.769zM1.399 6.899a5.5 5.5 0 1111 0c0 3.038-2.462 5.5-5.5 5.5s-5.5-2.461-5.5-5.5z" />
+          <svg class="user-list__icon" width="17.6" height="17.6">
+            <use xlink:href="./img/sprite.svg#icon-search"></use>
           </svg>
           <a href="#">Поиск по сайту</a>
         </li>
         <li class="main-nav__item main-nav__item--cart">
-          <svg class="main-nav__icon main-nav__icon--cart" height="18.849" viewbox="264.205 370.961 20.294 18.849"
-            width="20.294" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="m283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0 -1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0 -1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0 -.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0 -.316-.596l.854-2.991h.157a.75.75 0 1 0 -.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881zm1.653-5.785h-13.739l-.81-2.836h15.359z"
-              fill="#231f20" /></svg>
+            <svg class="user-list__icon" width="20.2" height="18.8">
+                <use xlink:href="./img/sprite.svg#icon-bag"></use>
+              </svg>
           <a href="#">Корзина: пока пуста</a>
         </li>
       </ul>
@@ -77,16 +73,13 @@
         <li class="products-list__item product-card">
 
           <picture>
-            <source media="(min-width: 1440px)"
-              srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
-            <source media="(min-width: 1440px)"
-              srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
-            <img class="product-card__image" width="260" height="195" src="img/photo-hare-mobile@1x.jpg"
-              alt="Зайчик-попрыгайчик">
+            <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x, img/photo-hare-mobile@2x.webp 2x">
+
+            <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
+            <img class="product-card__image" width="260" height="195" src="img/photo-hare-mobile@1x.jpg" alt="Зайчик-попрыгайчик">
           </picture>
 
           <div class="product-card__info">
@@ -104,17 +97,15 @@
         <li class="products-list__item product-card">
 
           <picture>
-            <source media="(min-width: 1440px)"
-              srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
-            <source media="(min-width: 1440px)"
-              srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
-            <img class="product-card__image" width="260" height="195" src="img/photo-bowl-mobile@1x.jpg"
-              alt="Корзинка для белья">
+            <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
+
+            <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+            <img class="product-card__image" width="260" height="195" src="img/photo-bowl-mobile@1x.jpg" alt="Корзинка для белья">
           </picture>
+
           <div class="product-card__info">
             <div class="product-card__text-container">
               <h3 class="product-card__title">Корзинка для белья</h3>
@@ -131,17 +122,15 @@
         </li>
 
         <li class="products-list__item product-card">
+
           <picture>
-            <source media="(min-width: 1440px)"
-              srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
-            <source media="(min-width: 1440px)"
-              srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
-            <img class="product-card__image" width="260" height="195" src="img/photo-toys-mobile@1x.jpg"
-              alt="Большая корзинка для игрушек">
+            <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/photo-toys-mobile@1x.webp 1x, img/photo-toys-mobile@2x.webp 2x">
+
+            <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
+            <img class="product-card__image" width="260" height="195" src="img/photo-toys-mobile@1x.jpg" alt="Большая корзинка для игрушек">
           </picture>
 
           <div class="product-card__info">
@@ -164,9 +153,11 @@
 
       <div class="how-its-done__image-wrapper video-player">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
-          <source media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
-          <source media="(min-width: 1440px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
+
+          <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
           <img class="how-its-done__image" width="260" src="img/video-mobile@1x.jpg" alt="Процесс производства">
         </picture>
