--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
     <div class="main-nav">
       <a class="main-nav__logo header__logo">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
           <img class="header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
         </picture>
@@ -109,15 +109,13 @@
         </table>
 
         <picture>
-          <source media="(min-width: 1440px)"
-            srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
-          <source media="(min-width: 768px)"
-            srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
-          <source media="(min-width: 1440px)"
-            srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
+
+          <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-          <img class="product-of-week__image" src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px"
-            alt="Товар недели">
+          <img class="product-of-week__image" src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели">
         </picture>
         <span class="product-of-week__price">Цена: 990 руб.</span>
         <a class="product-of-week__buy button" href="form.html">Заказать</a>
